# tt_simon_spi

./: .gitignore  README.md  info.yaml  pyproject.toml
art/: Makefile  chip_art.gds  chip_art.lef  make_gds.py
docs/: info.md
micropython/: micropython_example.py
python/: pyftdi_example.py  pyftdi_list_devices.py
src/: chip_art.v  config.json  simon64_128_core.v  spi_peripheral.v  tt_um_pakesson_simon64_128.v
test/: Makefile  requirements.txt  simon_reference.py  tb.v  tb_tt_um_pakesson_simon64_128.v  test.py  test_simon_reference.py  test_tt_um_pakesson_simon64_128.py  test_tt_um_pakesson_simon64_128_internal.py
