[project]
name = "tt-simon-spi"
version = "0.1.0"
description = "Python dependencies for SIMON64/128"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cairocffi==1.7.1",
    "cairosvg==2.8.2",
    "certifi==2025.8.3",
    "cffi==1.17.1",
    "cfgv==3.4.0",
    "charset-normalizer==3.4.2",
    "chevron==0.14.0",
    "click==8.2.1",
    "cocotb==2.0.1",
    "configupdater==3.2",
    "contourpy==1.3.3",
    "cssselect2==0.8.0",
    "cycler==0.12.1",
    "defusedxml==0.7.1",
    "distlib==0.4.0",
    "filelock==3.18.0",
    "fonttools==4.60.1",
    "gdspy>=1.6.13",
    "gdstk==0.9.60",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "identify==2.6.12",
    "idna==3.10",
    "importlib-resources==6.5.2",
    "iniconfig==2.1.0",
    "kiwisolver==1.4.9",
    "klayout==0.29.12",
    "librelane>=3.0.2",
    "matplotlib==3.10.6",
    "mistune==3.1.3",
    "mpremote==1.27.0",
    "nodeenv==1.9.1",
    "numpy==1.26.4",
    "packaging==25.0",
    "pillow==11.3.0",
    "platformdirs==4.3.8",
    "pluggy==1.6.0",
    "pre-commit==4.2.0",
    "pycparser==2.22",
    "pyftdi>=0.57.1",
    "pygments==2.19.2",
    "pyparsing==3.2.5",
    "pyserial==3.5",
    "pytest==8.4.2",
    "python-dateutil==2.9.0.post0",
    "python-frontmatter==1.1.0",
    "pyyaml==6.0.2",
    "requests==2.32.4",
    "simonspeckciphers>=1.0.0",
    "six==1.17.0",
    "smmap==5.0.2",
    "tinycss2==1.4.0",
    "urllib3==2.5.0",
    "virtualenv==20.33.1",
    "wasmtime==35.0.0",
    "wavedrom>=2.0.3.post3",
    "webencodings==0.5.1",
    "yowasp-runtime==1.78",
    "yowasp-yosys==0.55.0.0.post944",
]
